# tp

./: .gitignore  Cargo.toml  README.md  config.toml  correct.toml  example.toml
lib/src/: lib.rs  macros.rs
lib/src/fields/: editor_field.rs
lib/src/read/: path.rs
parser/: Cargo.toml
parser/src/: main.rs
shell/: tp-completions.nu  tp.bash  tp.fish  tp.zsh
src/: main.rs  print_macro.rs
src/fields/: editor_field.rs  mod.rs
tp-bin/: Cargo.toml
tp-bin/src/: main.rs
tp-lib/: Cargo.toml
tp-lib/src/: lib.rs  macros.rs
tp-lib/src/fields/: editor_field.rs
tp-lib/src/generate/: genrate_config.rs
tp-lib/src/path/: read.rs
tp-lib/src/read/: path.rs
