[workspace]

members = ["tp-bin", "tp-lib"]
resolver = "2"

[workspace.package]
description = "tp is CLI tool that will guide people who don't care about configuring Helix or Diwan they just wanna work"
version = "24.7.14"
edition = "2021"
authors = ["Abdogouhmad"]
readme = "README.md"
repository = "https://github.com/abdogouhmad/tp"


[profile.dev]
opt-level = 1
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
