[package]
name = "tp"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "4.5.1", features = ["derive", "cargo"] }
tparser = { path = "../lib" }
